# tomato

./: CMakeLists.txt  LICENSE  README.md  clock.cpp  clock.h  main.cpp  mainForm.cpp  mainForm.h  mainForm.ui  pomoListWidget.cpp  pomoListWidget.h  pomodoroTimer.cpp  pomodoroTimer.h  resources.qrc  settings.ui  settingsDialog.cpp  settingsDialog.h  settingsDialog.ui  settingsSerializer.cpp  settingsSerializer.h  timerSettings.cpp  timerSettings.h
.github/workflows/: cmake-single-platform.yml
